@startuml

title __THE GAME - LE DUEL's Class Diagram__\n

  namespace appli {
    class appli.Application {
    }
  }
  

  namespace appli {
    namespace Composants {
      class appli.Composants.Base {
      }
    }
  }
  

  namespace appli {
    namespace Composants {
      class appli.Composants.Cartes {
      }
    }
  }
  

  namespace appli {
    namespace Composants {
      class appli.Composants.Main {
      }
    }
  }
  

  namespace appli {
    class appli.Joueur {
    }
  }
  

  namespace appli {
    enum NomJoueur {
    }
  }
  

  namespace appli {
    class appli.Table {
    }
  }
  

  appli.Joueur o-- appli.Composants.Base : base
  appli.Joueur o-- appli.Composants.Main : main
  appli.Joueur o-- appli.NomJoueur : nom
  appli.Joueur o-- appli.Composants.Cartes : pioche


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
